--- a/agentic-rag-sample/.env.example
+++ b/agentic-rag-sample/.env.example
@@ -3,8 +3,7 @@
 
 # Ollama Configuration
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_MODEL=gemma2:latest
-
+OLLAMA_MODEL=mistral:latest
 # HuggingFace Configuration
 HUGGINGFACE_MODEL=BAAI/bge-small-en-v1.5
 
