refactor: update dependencies and remove HuggingFace integration
- Removed "@llamaindex/huggingface" from package.json.
- Updated index.ts to use OllamaEmbedding instead of HuggingFaceEmbedding for embedding model configuration.
- Added a setup script for Ollama models in agentic-rag-sample.
- Enhanced prompt-api-playground with improved error handling and user feedback for model availability.
- Updated README.md and index.html links to reflect the latest documentation.
- Added new npm scripts for easier installation of submodules in the main project.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "description": "A collection of client-side AI capability demos",
   "scripts": {
     "dev": "npx http-server .",
+    "install:all": "npm-run-all --parallel install:*",
+    "install:phi": "cd phi-3.5-webgpu && npm install",
+    "install:summarization": "cd summarization-api-playground && npm install",
+    "install:explain": "cd explain-in-generations && npm install",
+    "install:next": "cd next-client && npm install",
+    "install:techstack": "cd techstack-time-machine && npm install",
+    "install:video-bg": "cd video-background-removal && npm install",
+    "install:video-obj": "cd video-object-detection && npm install",
+    "install:phichat": "cd onnxruntimeweb-phichat && npm install",
     "build": "npm run build:all",
     "build:all": "npm-run-all --parallel build:*",
     "build:phi": "cd phi-3.5-webgpu && npm install && npm run build",
