--- a/agentic-rag-sample/.env.example
+++ b/agentic-rag-sample/.env.example
@@ -4,8 +4,7 @@
 # Ollama Configuration
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=mistral:latest
-# HuggingFace Configuration
-HUGGINGFACE_MODEL=BAAI/bge-small-en-v1.5
+OLLAMA_EMBEDDING_MODEL=nomic-embed-text
 
 # Application Configuration
 DOCS_FOLDER=./docs
